unpackaged/main/default/objects/dfsle__EnvelopeStatus__c/fields/dfsle__Contact__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to connect status record with source Contact</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>DocuSign Status</relationshipLabel>
    <relationshipName>DocuSign_Status</relationshipName>
    <type>Lookup</type>
</CustomField>