unpackaged/main/default/objects/dfsle__EnvelopeStatus__c/fields/dfsle__Contract__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to connect status record with source Contract</description>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>DocuSign Status</relationshipLabel>
    <relationshipName>DocuSign_Status</relationshipName>
    <type>Lookup</type>
</CustomField>