unpackaged/main/default/objects/dfsle__EnvelopeStatus__c/fields/dfsle__Lead__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to connect status record with source Lead</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>DocuSign Status</relationshipLabel>
    <relationshipName>DocuSign_Status</relationshipName>
    <type>Lookup</type>
</CustomField>