unpackaged/main/default/objects/dfsle__EnvelopeStatus__c/fields/dfsle__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to connect status record with source Opportunity</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>DocuSign Status</relationshipLabel>
    <relationshipName>DocuSign_Status</relationshipName>
    <type>Lookup</type>
</CustomField>