unpackaged/main/default/objects/dfsle__EnvelopeStatus__c/fields/dfsle__TimeToComplete__c.field-meta.xml
<CustomField>
    <fullName>dfsle__TimeToComplete__c</fullName>
    <formula>IF(dfsle__Status__c  = "Voided", "",  IF(dfsle__Status__c  = "Declined",  "",   IF(dfsle__Status__c  = "Sent",  "",
			TEXT(ROUND((dfsle__Completed__c  -  dfsle__Sent__c) - MOD(dfsle__Completed__c  - dfsle__Sent__c, 1), 0)) &amp;" day(s), "&amp;
			TEXT(ROUND(MOD(dfsle__Completed__c - dfsle__Sent__c, 1) * 24 - MOD(MOD(dfsle__Completed__c - dfsle__Sent__c,1) * 24, 1), 0)) &amp;" hour(s), "&amp;
			TEXT(ROUND(MOD(MOD(dfsle__Completed__c - dfsle__Sent__c, 1) * 24, 1) * 60, 0)) &amp;" minute(s)")))</formula>
    <label>Time to Complete</label>
    <type>Text</type>
</CustomField>