unpackaged/main/default/objects/dfsle__EnvelopeStatus__c/listViews/dfsle__AllEnvelopes.listView-meta.xml
<ListView>
    <fullName>dfsle__AllEnvelopes</fullName>
    <columns>NAME</columns>
    <columns>dfsle__SenderName__c</columns>
    <columns>dfsle__EmailSubject__c</columns>
    <columns>dfsle__Status__c</columns>
    <columns>dfsle__Sent__c</columns>
    <columns>dfsle__Completed__c</columns>
    <columns>dfsle__LastStatusUpdate__c</columns>
    <columns>dfsle__TimeToComplete__c</columns>
    <columns>dfsle__SourceId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Envelopes</label>
</ListView>